Fix body align

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     color: #c17e2c;
     font-family: "Fraunces", monospace;
     background-color: #eff4c3;
-    text-align: justify;
+    text-align: center;
 }
 
 img {
